--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-Django>=5.1,<5.3
-djangorestframework>=3.15
-djangorestframework-simplejwt>=5.3
-django-cors-headers>=4.3
-python-decouple>=3.8
+# --- Core (Python 3.9 compatible) ---
+Django>=4.2,<4.3                 # LTS, supports Py3.9
+djangorestframework>=3.14,<3.16
+djangorestframework-simplejwt>=5.3,<6
+django-cors-headers>=4.3,<5
+python-decouple>=3.8,<4
+psycopg2-binary>=2.9,<3          # only if you use Postgres
 
-psycopg2-binary>=2.9
-
-spacy>=3.7
+# --- NLP (optional, if you actually use spaCy) ---
+spacy>=3.7,<3.8
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
 
-PyMuPDF>=1.23
+# --- PDF parsing (optional) ---
+PyMuPDF>=1.23,<1.24
 
-# Optional for development
-ipython>=8.0
-
-pip install -r requirements.txt
+ipython>=8,<9
