--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,5 @@ en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_
 PyMuPDF>=1.23,<1.24
 
 ipython>=8,<9
+python-dotenv>=1.0
+openai>=1.30,<2.0
